<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pedometerLockScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="120dp"
            android:textColor="@color/black"
            android:textSize="15pt"
            android:text="@string/title" />
        <TextView
            android:id="@+id/swalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15pt"
            android:textColor="@color/black"
            android:text="test" />
    </LinearLayout>

    <com.dinuscxj.progressbar.CircleProgressBar
        android:id="@+id/cpb_circlebar"
        android:layout_width="match_parent"
        android:layout_height="323dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313"
        app:progress_end_color="#FF2424"
        app:progress_start_color="#FFBB00"
        app:progress_stroke_cap="round"
        app:progress_stroke_width="20dp "
        app:progress_text_size="50sp"
        app:style="solid_line" />
<!---->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="117dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/shoes2"
        android:stateListAnimator="@anim/shake_shoe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356">


        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="120dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="35dp"
            android:text="@string/timer"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/sensor"
        android:layout_width="104dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:visibility="invisible"
        android:text="0"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="73dp"
        android:clickable="true"
        android:onClick="goto_home"
        android:scaleType="fitCenter"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="90dp"
        android:layout_height="74dp"
        android:clickable="true"
        android:onClick="run_contacts"
        android:scaleType="fitCenter"
        android:src="@drawable/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="90dp"
        android:layout_height="74dp"
        android:clickable="true"
        android:onClick="run_message"
        android:scaleType="fitCenter"
        android:src="@drawable/message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

</androidx.constraintlayout.widget.ConstraintLayout>